[gd_scene load_steps=39 format=3 uid="uid://dwh4vaq8esl1w"]

[ext_resource type="Script" uid="uid://c6p3o8fitt0i3" path="res://Entities/Players/player.gd" id="1_xjlfs"]
[ext_resource type="Texture2D" uid="uid://cvfpul38nawix" path="res://Entities/Players/TESTTEXTURE.webp" id="2_g2faj"]
[ext_resource type="Script" uid="uid://dqat1o4u5vdcp" path="res://Entities/Players/grapple.gd" id="3_vb8cd"]
[ext_resource type="Texture2D" uid="uid://dnwb2jrgan5nk" path="res://addons/kenney_particle_pack/circle_02.png" id="4_5vp2d"]
[ext_resource type="Script" uid="uid://5g7wulyiuo2n" path="res://Entities/Players/swing.gd" id="4_p4qpu"]
[ext_resource type="Script" uid="uid://fonvtouhojms" path="res://Entities/Players/node.gd" id="5_p4qpu"]
[ext_resource type="Texture2D" uid="uid://dgehn67uyfvuv" path="res://addons/kenney_particle_pack/star_07.png" id="6_6adbs"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n3m37"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2faj"]
atlas = ExtResource("2_g2faj")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcr8b"]
atlas = ExtResource("2_g2faj")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb145"]
atlas = ExtResource("2_g2faj")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x2d1"]
atlas = ExtResource("2_g2faj")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q652p"]
atlas = ExtResource("2_g2faj")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6adbs"]
atlas = ExtResource("2_g2faj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smb38"]
atlas = ExtResource("2_g2faj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f474t"]
atlas = ExtResource("2_g2faj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk8ar"]
atlas = ExtResource("2_g2faj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hwvw"]
atlas = ExtResource("2_g2faj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb8cd"]
atlas = ExtResource("2_g2faj")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_useuu"]
atlas = ExtResource("2_g2faj")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwwuc"]
atlas = ExtResource("2_g2faj")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ke2e"]
atlas = ExtResource("2_g2faj")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uqvl"]
atlas = ExtResource("2_g2faj")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4qpu"]
atlas = ExtResource("2_g2faj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vp2d"]
atlas = ExtResource("2_g2faj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwtga"]
atlas = ExtResource("2_g2faj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j33m"]
atlas = ExtResource("2_g2faj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_toava"]
atlas = ExtResource("2_g2faj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6adbs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2faj")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcr8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb145")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x2d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q652p")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6adbs")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smb38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f474t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk8ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hwvw")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb8cd")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_useuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwwuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ke2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uqvl")
}],
"loop": true,
"name": &"left_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4qpu")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vp2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwtga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j33m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toava")
}],
"loop": true,
"name": &"right_walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xjlfs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p4qpu"]
albedo_color = Color(1, 0.5529412, 1, 1)

[sub_resource type="Animation" id="Animation_g2faj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xjlfs"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainHand:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0837758, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vb8cd"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainHand:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0837758, 0, 0)]
}

[sub_resource type="Animation" id="Animation_aha4f"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainHand:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.0529841, 0, 0), Vector3(0.450295, 0, 0), Vector3(-0.0529841, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vb8cd"]
_data = {
&"RESET": SubResource("Animation_g2faj"),
&"idle": SubResource("Animation_xjlfs"),
&"move": SubResource("Animation_vb8cd"),
&"shoot": SubResource("Animation_aha4f")
}

[sub_resource type="Gradient" id="Gradient_5vp2d"]
offsets = PackedFloat32Array(0.29464287, 0.73214287, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qwtga"]
gradient = SubResource("Gradient_5vp2d")
width = 11
height = 11
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("current_tool")]
collision_layer = 2
slide_on_ceiling = false
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
floor_block_on_wall = false
safe_margin = 0.01
script = ExtResource("1_xjlfs")
current_tool = NodePath("Camera3D/MainHand/Grapple")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_n3m37")

[node name="Sprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(5.97, 0, 0, 0, 5.97, 0, 0, 0, 5.97, 0, 0.738327, 0)
gi_mode = 0
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_6adbs")
animation = &"right"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_xjlfs")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29691, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00161541, -0.00206697, 0.0244083)
target_position = Vector3(0, 0, -50)

[node name="MainHand" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.382142, -0.29827404, -0.151892)

[node name="Grapple" type="CSGBox3D" parent="Camera3D/MainHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.034788996, -0.029127777, -0.288543)
size = Vector3(0.109131, 0.180359, 0.339722)
script = ExtResource("3_vb8cd")

[node name="UiIndicator" type="TextureProgressBar" parent="Camera3D/MainHand/Grapple"]
modulate = Color(0, 1, 0.14999986, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -252.0
offset_right = 255.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.175, 0.175)
pivot_offset = Vector2(257.14258, 251.42871)
max_value = 1.0
step = 0.010000000009313226
value = 1.0
fill_mode = 4
texture_progress = ExtResource("4_5vp2d")

[node name="Swing" type="CSGBox3D" parent="Camera3D/MainHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.034788996, -0.029127777, -0.288543)
visible = false
size = Vector3(0.109131, 0.180359, 0.339722)
material = SubResource("StandardMaterial3D_p4qpu")
script = ExtResource("4_p4qpu")

[node name="UiIndicator" type="TextureProgressBar" parent="Camera3D/MainHand/Swing"]
visible = false
modulate = Color(0, 1, 0.14999986, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -252.0
offset_right = 255.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.175, 0.175)
pivot_offset = Vector2(257.14258, 251.42871)
max_value = 1.0
step = 0.010000000009313226
value = 1.0
fill_mode = 4
texture_progress = ExtResource("4_5vp2d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_vb8cd")
}
blend_times = [&"RESET", &"RESET", 0.2, &"RESET", &"idle", 0.2, &"RESET", &"move", 0.2, &"RESET", &"shoot", 0.2]

[node name="Node" type="Node3D" parent="."]
script = ExtResource("5_p4qpu")

[node name="Label3D" type="Label3D" parent="Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53359, 0)
billboard = 1
text = "test"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("6_6adbs")
expand_mode = 1

[node name="JumpIcons" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 49.0
offset_top = -16.0
offset_right = 70.0
offset_bottom = 57.0
alignment = 1

[node name="JumpIcon" type="TextureRect" parent="Control/JumpIcons"]
layout_mode = 2
texture = SubResource("GradientTexture2D_qwtga")
stretch_mode = 3

[connection signal="animation_finished" from="Camera3D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
